# OTUS_diploma

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
config/: settings.py  urls.py
core/: admin.py  models.py  urls.py  views.py
core/migrations/: 0001_initial.py  0002_employee_photo.py  0003_department_alter_employee_department.py  0004_alter_employee_department.py
core/templates/core/: employees.html
documents/: admin.py  models.py  network_commands.txt  urls.py  views.py
documents/migrations/: 0001_initial.py
documents/templates/documents/: document_list.html
faq/: admin.py  models.py  urls.py  views.py
faq/templates/faq/: faq_list.html
media/documents/: GIT.txt
news/: admin.py  forms.py  models.py  urls.py  views.py
news/migrations/: 0001_initial.py  0002_remove_tag_news_news_tags_comment_like.py  0003_alter_comment_content.py  0004_like_created_at.py
news/templates/news/: news_detail.html  news_form.html  news_list.html
templates/: base.html
users/: admin.py  forms.py  models.py  signals.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_remove_user_department.py  0003_alter_user_is_active_alter_user_is_staff.py
users/templates/users/: edit_profile.html  login.html  profile.html
