[project]
name = "korp-portal"
version = "0.1.0"
description = ""
authors = [
    {name = "Ravil Bikeev",email = "ravil.bikeev@indeed-id.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django (>=5.2,<6.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "django-widget-tweaks (>=1.5.0,<2.0.0)",
    "django-select2 (>=8.4.0,<9.0.0)",
    "pillow (>=11.2.1,<12.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
